// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU",
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu3",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "$": "Bind",
                    "f": Array [
                      Array [
                        Object {
                          "$": "#this",
                        },
                        null,
                      ],
                      Array [
                        Object {
                          "$": "#fun",
                        },
                        Object {
                          "$": "_signal",
                        },
                      ],
                      Array [
                        Object {
                          "$": "#args",
                        },
                        Array [
                          Object {
                            "$": "menuDispatch",
                          },
                          "Menu3",
                          Object {
                            "f": Array [
                              Array [
                                "type",
                                "Menu3",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": Object {
          "f": Array [
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": Object {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
}
`;

exports[`menu 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU",
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu1",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "$": "Bind",
                    "f": Array [
                      Array [
                        Object {
                          "$": "#this",
                        },
                        null,
                      ],
                      Array [
                        Object {
                          "$": "#fun",
                        },
                        Object {
                          "r": 1,
                        },
                      ],
                      Array [
                        Object {
                          "$": "#args",
                        },
                        Array [
                          Object {
                            "r": 0,
                          },
                          "Menu1",
                          Object {
                            "f": Array [
                              Array [
                                "type",
                                "Menu1",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$1",
                ],
              ],
            },
            "type": "button",
          },
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu3",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "$": "Bind",
                    "f": Array [
                      Array [
                        Object {
                          "$": "#this",
                        },
                        null,
                      ],
                      Array [
                        Object {
                          "$": "#fun",
                        },
                        Object {
                          "r": 1,
                        },
                      ],
                      Array [
                        Object {
                          "$": "#args",
                        },
                        Array [
                          Object {
                            "r": 0,
                          },
                          "Menu3",
                          Object {
                            "f": Array [
                              Array [
                                "type",
                                "Menu3",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": Object {
          "f": Array [
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": Object {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "menuDispatch",
    },
    Object {
      "$": "_signal",
    },
  ],
}
`;

exports[`menu 3`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU",
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu1",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "$": "Bind",
                    "f": Array [
                      Array [
                        Object {
                          "$": "#this",
                        },
                        null,
                      ],
                      Array [
                        Object {
                          "$": "#fun",
                        },
                        Object {
                          "r": 1,
                        },
                      ],
                      Array [
                        Object {
                          "$": "#args",
                        },
                        Array [
                          Object {
                            "r": 0,
                          },
                          "Menu1",
                          Object {
                            "f": Array [
                              Array [
                                "type",
                                "Menu1",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$1",
                ],
              ],
            },
            "type": "button",
          },
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu2",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "$": "Bind",
                    "f": Array [
                      Array [
                        Object {
                          "$": "#this",
                        },
                        null,
                      ],
                      Array [
                        Object {
                          "$": "#fun",
                        },
                        Object {
                          "r": 1,
                        },
                      ],
                      Array [
                        Object {
                          "$": "#args",
                        },
                        Array [
                          Object {
                            "r": 0,
                          },
                          "Menu2",
                          Object {
                            "f": Array [
                              Array [
                                "type",
                                "Menu2",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$2",
                ],
              ],
            },
            "type": "button",
          },
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu3",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "$": "Bind",
                    "f": Array [
                      Array [
                        Object {
                          "$": "#this",
                        },
                        null,
                      ],
                      Array [
                        Object {
                          "$": "#fun",
                        },
                        Object {
                          "r": 1,
                        },
                      ],
                      Array [
                        Object {
                          "$": "#args",
                        },
                        Array [
                          Object {
                            "r": 0,
                          },
                          "Menu3",
                          Object {
                            "f": Array [
                              Array [
                                "type",
                                "Menu3",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": Object {
          "f": Array [
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": Object {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "menuDispatch",
    },
    Object {
      "$": "_signal",
    },
  ],
}
`;

exports[`menu 4`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;
